--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,5 @@
 upstream api{
-    server LMS_app:8753;
+    server lms_app:8753;
 }
 
 
@@ -25,7 +25,7 @@ server{
     location /api {
         # suppose user send request to /api/all then we get only "/all" part and delete "/api" part from url
          rewrite /api/(.*) /$1 break;
-        proxy_pass http://LMS_app:8753;
+        proxy_pass http://lms_app:8753;
         proxy_set_header Access-Control-Allow-Origin *;
         # proxy_set_header Host $host;
         add_header Access-Control-Allow-Origin *;
