solve the production memory and docker

--- a/default.conf
+++ b/default.conf
@@ -33,5 +33,7 @@ server{
         add_header Access-Control-Expose-Headers Content-Length;
         add_header Access-Control-Allow-Headers Range;
     }
-    
+    location /uploads/ {
+        alias /lms_app/uploads/;
+    }    
 }
