--- a/default.conf
+++ b/default.conf
@@ -27,7 +27,16 @@ server{
          rewrite /api/(.*) /$1 break;
         proxy_pass http://lms_app:8753;
         proxy_set_header Access-Control-Allow-Origin *;
-        # proxy_set_header Host $host;
+       
+	proxy_http_version 1.1;
+        proxy_request_buffering off;    # important for large uploads
+        client_max_body_size 2G;        # allow big files
+        proxy_connect_timeout 1200s;
+        proxy_send_timeout 1200s;
+        proxy_read_timeout 1200s;
+        send_timeout 1200s;
+
+	 # proxy_set_header Host $host;
         add_header Access-Control-Allow-Origin *;
         add_header Access-Control-Max-Age 3600;
         add_header Access-Control-Expose-Headers Content-Length;
