--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   }
 }
